<resources>
    <string name="app_name">暮暮</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="public_photo">图片</string>
    <string name="public_search">Search</string>
    <string name="loading_hint">正在努力滴加载</string>
    <string name="photo_set">设置头像</string>
    <string name="photo_album">相册</string>
    <string name="photo_takephoto">拍照</string>
    <string name="main_exit">再按一次返回键,可直接退出程序</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在努力滴加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">声音</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="soft_update_no">当前已经是最新版本</string>
    <string name="nearby">附近</string>
    <string name="message">消息</string>
    <string name="discover">发现</string>
    <string name="personal">我</string>
    <string name="nearby_friends">吧友</string>
    <string name="nearby_pub">酒吧</string>
    <string name="nearby_singer">艺人</string>
    <string name="nearby_date">附近约会</string>
    <string name="date_successful">已成功约会</string>
    <string name="date_addendus">可加入约会</string>
    <string name="filter">筛选</string>
    <string name="myWine">我的酒水</string>
    <string name="pubQing">清吧</string>
    <string name="pubRock">迪吧</string>
    <string name="pubArts">演艺吧</string>
    <string name="singerGroup">组合</string>
    <string name="singerPerssonal">个人</string>
    <string name="singerPopularity">人气</string>
    <string name="date_manager">约会管理</string>
    <string name="enter_pager">体验暮暮</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="login_checkbox">记住密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="user_agreement">用户协议</string>
    <string name="forget">忘记密码</string>
    <string name="others">其他平台登陆</string>
    <string name="string_please_inputuserpsd">请输入用户名和密码</string>
    <string name="string_please_inputuser">请输入用户名后再试</string>
    <string name="string_please_inputpsd">请输入密码后再试</string>
    <string name="string_please_input_right_user">用户名不正确，请重新输入用户名</string>
    <string name="string_please_input_right_psd">密码不正确，请重新输入密码</string>
    <string name="phoneNum_null">手机号码不能为空</string>
    <string name="not_phoneNum">手机号码不合法</string>
    <string name="location_error">定位信息失败，请检查GPRS是否打开后再登陆</string>
    <string name="login_success">登陆服务器成功！</string>
    <string name="login_fail">登陆失败！</string>
    <string name="net_not_found">登陆失败！请检查网络状态</string>
    <string name="nickname">昵称:</string>
    <string name="phoneNum">手机号码:</string>
    <string name="sex">性别:</string>
    <string name="identifying">验证码:</string>
    <string name="inputpsd">输入密码:</string>
    <string name="input_again">再次输入:</string>
    <string name="input_nickname">输入昵称</string>
    <string name="input_location">输入地点</string>
    <string name="input_phonenum">输入手机号码</string>
    <string name="input_psd">输入密码</string>
    <string name="input_psd_again">请再次输入密码</string>
    <string name="checkbox_sex_boy">男</string>
    <string name="checkbox_sex_girl">女</string>
    <string name="checkbox_sex_other">其他</string>
    <string name="getidentifying">获取验证码</string>
    <string name="please_input_all">信息输入不完整</string>
    <string name="psd_not_same">两次输入密码不一致</string>
    <string name="psd_not_legal">请输入8到16位的密码</string>
    <string name="getidentifying_error">验证失败</string>
    <string name="hint_selectGender">请选择性别后再试！</string>
    <string name="hint_sureGender">性别确定后，将不可修改</string>
    <string name="register_success">注册成功, 请使用注册手机号或者暮暮号</string>
    <string name="register_repeat">该用户已经注册</string>
    <string name="register_fail">注册失败</string>
    <string name="register_agreement_tips">●注册既代表你阅读并同意《暮暮协议》</string>
    <string name="newpsd">新密码:</string>
    <string name="newpsd_submit_success">提交成功，请重新登录尝试</string>
    <string name="newpsd_submit_fail">提交请求败</string>
    <string name="name_normal">姓名</string>
    <string name="age_normal">20</string>
    <string name="mood_normal">一起来玩吧…</string>
    <string name="space_normal">0.21km</string>
    <string name="time_normal">5分钟前</string>
    <string name="search_only_girl">只看女生</string>
    <string name="search_only_boy">只看男生</string>
    <string name="search_nearby">近距离</string>
    <string name="search_all">全部</string>
    <string name="name_pub_normal">保罗酒吧</string>
    <string name="name_barstyle_normal">演绎吧</string>
    <string name="name_place_normal">湖北省武汉市光谷广场101号</string>
    <string name="name_peoplepays_normal">人均</string>
    <string name="pub_type">清吧</string>
    <string name="pub_detail">保罗酒吧位于广州市中心，临近大商圈以及写字楼是楼上偶等你，看按时交付南方少年搜ID啊按当年发生的澳大凯撒大帝阿萨德路卡法怕睡觉打色卡爬上打算开发上发放阿婆是恐惧的卡上卷发将首发阿丕书记发生纠纷撒酒疯</string>
    <string name="pub_environment">酒吧环境</string>
    <string name="pub_singer">驻唱歌手</string>
    <string name="pub_sales">促销</string>
    <string name="pub_selectPackage">套餐选择</string>
    <string name="pub_regularSinger">驻唱</string>
    <string name="pub_stroll">逛逛吧</string>
    <string name="pub_list">酒吧列表</string>
    <string name="watch_video">观看视频</string>
    <string name="pubpackage_normal">套餐一</string>
    <string name="hint_name">名称：</string>
    <string name="yuan_show_normal">30元</string>
    <string name="orderNums">数量：</string>
    <string name="orderPriceTotal">总价：</string>
    <string name="orderPrice">单价：</string>
    <string name="orderSumbit">提交订单</string>
    <string name="hint_chouseAppropriateNums">请选择合适的数量</string>
    <string name="cannot_play">无法播放该视频</string>
    <string name="singer_show">艺人：</string>
    <string name="regular_pub">驻唱酒吧：</string>
    <string name="default_pub_dynamic">敬请期待新的动态</string>
    <string name="comment">评论</string>
    <string name="report">发表</string>
    <string name="play">播放</string>
    <string name="hint_pleaseInputComment">请输入评论内容</string>
    <string name="hint_moodLoadError">心情记录加载失败</string>
    <string name="hotChat">热聊</string>
    <string name="detail">详情</string>
    <string name="wine">酒水</string>
    <string name="singer">艺人</string>
    <string name="online">在线</string>
    <string name="welcomeToBar">欢迎光临</string>
    <string name="chatRome">聊天室</string>
    <string name="system">系统：</string>
    <string name="singer_name_normal">李志</string>
    <string name="singer_value_normal">中国内地民谣歌手</string>
    <string name="singer_barName_normal">慢摇清吧</string>
    <string name="videoList">视频列表</string>
    <string name="mood">心情</string>
    <string name="singerIntroduction">艺人简介</string>
    <string name="moodRecord">心情记录</string>
    <string name="moodRecord2">心情记录：</string>
    <string name="moodPostData_normal">12月14号\t17:30</string>
    <string name="hint_getSingerDetailError">获取艺人信息失败</string>
    <string name="hint_singerDataLoading">艺人信息未加载完，请稍候再试</string>
    <string name="hint_noneMood">该用户没有心情记录</string>
    <string name="hint_videoLoadingError">视频信息获取失败!</string>
    <string name="commentNone">暂无评论</string>
    <string name="hint_commentContentNone">请输入评论内容后再试</string>
    <string name="hint_commentError">评论失败</string>
    <string name="date_title_normal">一起约吧</string>
    <string name="date_time">时间：</string>
    <string name="date_time_normal">2014-12-1  16:38</string>
    <string name="date_attendpeoples">参与人数:</string>
    <string name="date_involved">已参与:</string>
    <string name="date_attendpeoples_normal">13</string>
    <string name="date_expect">期望：</string>
    <string name="date_expect_normal">不限</string>
    <string name="want_partake">想参与</string>
    <string name="stop_enroll">停止报名</string>
    <string name="cancel_date">终止约会</string>
    <string name="argee">同意</string>
    <string name="reject">拒绝</string>
    <string name="date_manage">管理</string>
    <string name="date_subject">主题：</string>
    <string name="date_favorite">心仪对象：</string>
    <string name="date_payByYou">你请</string>
    <string name="date_payByMe">我请</string>
    <string name="date_payByAA">AA</string>
    <string name="date_content_hint">\t请填写</string>
    <string name="date_address">活动地点：</string>
    <string name="hint_pleaceSelect">请选择</string>
    <string name="date_wine">酒水详单：</string>
    <string name="hint_dateWine">酒水详单</string>
    <string name="date_select">可选择</string>
    <string name="date_buy">可购买</string>
    <string name="gold_remnants_normal">300</string>
</resources>