<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <com.fullteem.yueba.widget.CircleImageView
        android:id="@+id/iv_usrheader"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/img_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="12dp"
        android:layout_toRightOf="@+id/iv_usrheader" >

        <LinearLayout
            android:id="@+id/rl_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_usrnickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="7"
                android:singleLine="true"
                android:text="@string/name_normal"
                android:textColor="@color/girl_red"
                android:textSize="@dimen/size_14" />

            <TextView
                android:id="@+id/tv_usrsex"
                style="@style/tvGenderSryle"
                android:layout_marginLeft="15dp"
                android:text="@string/gold_remnants_normal" />

            <RelativeLayout
                android:id="@+id/rlManage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btn_reject"
                    style="@style/btn_bgGray2White_textWhite2Black"
                    android:layout_alignParentRight="true"
                    android:text="@string/reject" />

                <Button
                    android:id="@+id/btn_argee"
                    style="@style/btn_bgBule2White_textWhite2Black"
                    android:layout_marginRight="15dp"
                    android:layout_toLeftOf="@id/btn_reject"
                    android:text="@string/argee" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_usrmood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_userinfo"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:singleLine="true"
            android:text="@string/mood_normal"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:layout_below="@id/tv_usrmood"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_nearby_date_line" />
    </RelativeLayout>

</RelativeLayout>