<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://robobinding.org/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/date_item_content"
    android:gravity="center" >

    <RelativeLayout
        android:id="@+id/data_sponsor_info"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical" >

        <com.fullteem.yueba.widget.CircleImageView
            android:id="@+id/iv_sponsor_header"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/img_icon" >
        </com.fullteem.yueba.widget.CircleImageView>

        <TextView
            android:id="@+id/tv_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_sponsor_header"
            android:singleLine="true"
            android:text="heeh"
            android:textColor="#0090ff"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_sponsor"
            android:layout_below="@id/tv_sponsor"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/female"
                android:drawablePadding="5dp"
                android:text="28"
                android:textColor="#999999"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:maxLength="8"
            android:singleLine="true"
            android:text="@string/date_title_normal"
            android:textColor="#f0206d"
            android:textSize="@dimen/size_18" />
    </RelativeLayout>

    <View
        android:id="@+id/view_dividerdatesponsor"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@id/data_sponsor_info"
        android:background="@drawable/bg_nearby_date_line" />

    <RelativeLayout
        android:id="@+id/data_bar_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_dividerdatesponsor"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_pubname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:ems="7"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/name_pub_normal"
            android:textColor="#666666"
            android:textSize="@dimen/size_14" />

        <TextView
            android:id="@+id/tv_time_show"
            style="@style/GrayWords"
            android:layout_below="@id/tv_pubname"
            android:layout_marginTop="4dp"
            android:text="@string/date_time"
            android:visibility="gone" />

        <!--
             <TextView
            android:id="@+id/tv_time"
            style="@style/GrayWords"
            android:layout_alignBottom="@id/tv_time_show"
            android:layout_toRightOf="@id/tv_time_show"
            android:text="@string/date_time_normal" />
        -->

        <TextView
            android:id="@+id/tv_time"
            style="@style/DateGrayWords"
            android:layout_alignLeft="@id/tv_pubname"
            android:layout_below="@id/tv_pubname"
            android:layout_marginTop="4dp"
            android:text="@string/date_time_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_pubname"
            android:layout_below="@id/tv_time"
            android:layout_marginRight="65dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:id="@+id/ll_attendpeoples"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DateGrayWords"
                    android:text="@string/date_attendpeoples"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_attendpeoples"
                    style="@style/DateGrayWords"
                    android:maxLength="4"
                    android:text="@string/date_attendpeoples_normal"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_involved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    style="@style/DateGrayWords"
                    android:text="@string/date_involved"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_involved"
                    style="@style/DateGrayWords"
                    android:maxLength="4"
                    android:text="@string/date_attendpeoples_normal"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_expect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DateGrayWords"
                    android:text="@string/date_expect"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_expect"
                    style="@style/DateGrayWords"
                    android:text="@string/date_expect_normal"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <com.fullteem.yueba.widget.CircleImageView
            android:id="@+id/ImgViewHeader"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/img_icon" >
        </com.fullteem.yueba.widget.CircleImageView>
    </RelativeLayout>

</RelativeLayout>