<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical" >

    <com.fullteem.yueba.widget.TopTitleView
        android:id="@+id/toptile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- 输入框 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/date_item_content"
        android:orientation="vertical"
        android:weightSum="4" >

        <!-- 手机号码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    style="@style/tv_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/phoneNum" />

                <EditText
                    android:id="@+id/edtPhoneNum"
                    style="@style/edt_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:hint="@string/input_phonenum" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@drawable/bg_nearby_date_line" />
        </LinearLayout>

        <!-- 验证码 identifying code -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:weightSum="4" >

            <TextView
                style="@style/tv_register_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/identifying" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="3" >

                <EditText
                    android:id="@+id/edtIdentifying"
                    style="@style/edt_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tvGetidentifying"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_btn_selector"
                    android:gravity="center"
                    android:text="@string/getidentifying"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_9" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/bg_nearby_date_line" />

        <!-- 输入密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    style="@style/tv_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/newpsd" />

                <EditText
                    android:id="@+id/edtInputPsd"
                    style="@style/edt_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:hint="@string/input_psd"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@drawable/bg_nearby_date_line" />
        </LinearLayout>

        <!-- 再次输入密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:weightSum="4" >

                <TextView
                    style="@style/tv_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/input_again" />

                <EditText
                    android:id="@+id/edtInputAgain"
                    style="@style/edt_register_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:hint="@string/input_psd_again"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="@drawable/bg_nearby_date_line" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/login_btn_selector"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/size_15"
        android:textStyle="bold" />

</LinearLayout>