<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <com.fullteem.yueba.widget.CircleImageView
        android:id="@+id/ivHeader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/img_icon" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/ivHeader"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tvName"
            style="@style/red_common_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="7"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/name_normal" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/date_time_normal"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_10" />

        <com.fullteem.yueba.widget.AutoRollTextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="left"
            android:text="@string/mood_normal"
            android:textColor="@color/gray"
            android:textSize="@dimen/size_12" />
    </RelativeLayout>

</RelativeLayout>